<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nucleus</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="generic_error">Something went wrong!</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="try_again">Try Again</string>
    <string name="quit">Quit</string>
    <string name="server_request_error" translatable="false">%d - %s</string>
    <string name="odoo_error">Server Error Occurred</string>
    <string name="exit">Exit</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_customer">Customers</string>
    <string name="action_supplier">Suppliers</string>
    <string name="action_company">Company</string>
    <string name="action_messaging">Messaging</string>
    <string name="action_new_chat">New Chat</string>
    <string name="action_debate">Debate</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_expense_tracker">Expense Tracker</string>
    <string name="action_store">Products</string>
    <string name="action_dashboard_inventory">Dashboard Inventory</string>
    <string name="action_dashboard_inventory_opened">Dashboard Inventory &#160; &#160; &#160; &#9650;</string>
    <string name="action_dashboard_inventory_closed">Dashboard Inventory &#160; &#160; &#160; &#9660;</string>
    <string name="action_notes">Notes</string>
    <string name="action_sales">Sales</string>
    <string name="action_tables">Tables</string>
    <string name="action_finance">Finance</string>
    <string name="group_menu_time_management">Time management</string>
    <string name="action_hours_parts">Parts of hours</string>
    <string name="action_activities">Activities</string>
    <string name="group_menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_help">About</string>
    <string name="group_menu_account_management">Account management</string>
    <string name="action_add_account">Add account</string>
    <string name="action_manage_account">Manage Accounts</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="action_filter_companies">Companies</string>
    <string name="action_filter_persons">Persons</string>
    <string name="action_filter_customers">Customers</string>
    <string name="action_filter_suppliers">Suppliers</string>
    <string name="action_customer_profile_share">Share</string>
    <string name="action_customer_profile_edit">Edit</string>
    <string name="action_customer_profile_refresh">Refresh</string>
    <string name="action_customer_profile_import">Import</string>
    <string name="action_customer_profile_edit_save">Save</string>
    <string name="action_customer_profile_edit_cancel">Cancel</string>
    <string name="action_filter_activities_late">Late</string>
    <string name="action_filter_activities_today">Today</string>
    <string name="action_filter_activities_future">Future</string>
    <string name="action_activities_sort_type">Type</string>
    <string name="action_activities_sort_date">Date</string>
    <string name="action_filter_companies_param">is_company</string>
    <string name="action_filter_persons_param">is_company</string>
    <string name="action_filter_customers_param">customer</string>
    <string name="action_filter_suppliers_param">supplier</string>
    <string name="customer_profile_website">WEBSITE</string>
    <string name="customer_profile_email">EMAIL</string>
    <string name="customer_profile_country">COUNTRY</string>
    <string name="customer_profile_phone">PHONE</string>
    <string name="customer_profile_mobile">MOBILE</string>
    <string name="customer_profile_comment">INTERNAL NOTE</string>
    <string name="customer_profile_company_name">COMPANY NAME</string>
    <string name="customer_profile_full_address">ADDRESS</string>
    <string name="customer_profile_state">STATE</string>
    <string name="customer_profile_city">CITY</string>
    <string name="customer_profile_street">STREET</string>
    <string name="customer_profile_street2">STREET2</string>
    <string name="customer_profile_zip">ZIP</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="street2">Street2</string>
    <string name="zip">Zip</string>
    <string name="company">Company</string>
    <string name="is_company">Is Company</string>
    <string name="web">Web</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="country">Country</string>
    <string name="note">Note</string>
    <string name="state">State</string>
    <string name="full_address">Address</string>
    <string name="no_country">No country selected</string>
    <string name="search_country">Search country</string>
    <string name="no_company">Without company</string>
    <string name="explain_permissions">You need to give some mandatory permissions to continue. Do you want to go to app settings?</string>
    <string name="explain_permissions_title">Service Permissions are required for this app</string>
    <string name="explain_permissions_positive_button">Service Permissions are required for this app</string>
    <string name="explain_permissions_negative_button">Service Permissions are required for this app</string>
    <string name="ok_positive_button">OK</string>
    <string name="cancel_negative_button">Cancel</string>
    <string name="pick_setup_title">Choose Picture</string>
    <string name="pick_setup_camera">Camera</string>
    <string name="pick_setup_gallery">Gallery</string>
    <string name="pick_setup_cancel">Cancel</string>
    <string name="pick_setup_progress">Loading…</string>
    <string name="base64_full_transparent_no_translate">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAC4jAAAuIwF4pT92AAAAB3RJTUUH4gsaCyoCUhzUJgAAABl0RVh0Q29tbWVudABDcmVhdGVkIHdpdGggR0lNUFeBDhcAAAA+SURBVHja7cExAQAAAMKg9U9tCy+gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACApwGcpAAB2HscXgAAAABJRU5ErkJggg==</string>
    <string name="toast_changes_saved">Changes successfully saved</string>
    <string name="dialog_title">Attention!</string>
    <string name="dialog_message">If you exit you will lose all the changes introduced. Do you really want to exit?</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="summary_activities">Summary</string>
    <string name="activity_activities">Activity</string>
    <string name="document_activities">Document</string>
    <string name="date_activities">Date</string>
    <string name="model_activities">Model</string>
    <string name="action_login_other_account">Manage Other Accounts</string>
    <string name="manage_account_remove_error">Failed to remove account</string>
    <string name="profile_full_name">Name:- N/A</string>
    <string name="profile_email">Email:- N/A</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_exit">Press again to exit</string>
    <string name="login_protocol">Protocol</string>
    <string name="login_host_hint">Host (e.g. 192.168.0.1:8069)</string>
    <string name="login_host_error">Please, type host URL</string>
    <string name="login_check_odoo_version">Connect to Server</string>
    <string name="login_checking_odoo_version">Connecting to Server&#8230;</string>
    <string name="login_server_success">Odoo version %s is compatible</string>
    <string name="login_server_error">Odoo version %s is incompatible</string>
    <string name="login_username_hint">Username (e.g. user@odoo.com)</string>
    <string name="login_username_error">Please, Type username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_error">Please, Type password</string>
    <string name="login_database_hint">Database</string>
    <string name="login_database_error">Please, Select database</string>
    <string name="login_credential_error">Wrong login/password</string>
    <string name="login_submit">Login</string>
    <string name="login_progress">Authenticating&#8230;</string>
    <string name="login_success">Creating user account&#8230;</string>
    <string name="login_create_account_error">Something went wrong creating user account</string>
    <string name="error_active_user">There is no active user found!</string>
    <string name="profile_name">Name</string>
    <string name="profile_login">Login</string>
    <string name="profile_server_url">Server URL</string>
    <string name="profile_database">Database</string>
    <string name="profile_odoo_version">Odoo Version</string>
    <string name="profile_timezone">Timezone</string>
    <string name="preference_build_category">Version Info</string>
    <string name="preference_build_key">build</string>
    <string name="preference_build_title">Build Version</string>
    <string name="preference_build_summary">Version %s</string>
    <string name="preference_about_category">About</string>
    <string name="preference_organization_key">organization</string>
    <string name="preference_organization_title">Developed By</string>
    <string name="preference_privacy_policy_key">privacy</string>
    <string name="preference_privacy_policy_title">Privacy Policy</string>
    <string name="preference_contact_key">contact</string>
    <string name="preference_contact_title">Contact Us</string>
    <string name="preference_prompt_email_intent">Send email using</string>
    <string name="preference_error_email_intent">There\'s no application found to open email links</string>
    <string name="recycler_empty_title">Your records appear here</string>
    <string name="recycler_error_retry">Retry</string>
    <string name="network_alert_title">Internet Connection Disabled</string>
    <string name="network_alert_message">Turn on Internet Connection</string>
    <string name="create_account_error">%s was unable to create account due to %s. Please, Logout then Login Again</string>
    <string name="no_channel">There\'s no channel found in the system</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">Sort by</string>
    <string name="quantity">Quantity</string>
    <string name="action_filter_sales_user_id">My Sales</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_filter_budgets">Quotation</string>
    <string name="action_filter_budgets_sent">Sent</string>
    <string name="action_filter_sales">Sales</string>
    <string name="group_menu_sga_inventory">Inventory</string>
    <string name="group_menu_sga_inventory_closed">Inventory &#160; &#160; &#160; &#9660;</string>
    <string name="action_inventory_tools">Inventory Tools</string>
    <string name="action_inventory_transference">Transference</string>
    <string name="action_inventory_picking">Picking</string>
    <string name="info_domatix_com">info@domatix.com</string>
    <string name="released_under_mit">Released under MIT license</string>
    <string name="copyright_symbol">©</string>
    <string name="domatix">Domatix</string>
    <string name="year">2018-2019.</string>
    <string name="description_about">Nucleus is a software to develop easily, natively and fast Odoo features into Android devices.</string>
    <string name="nuclius_version">v 2019.05.27</string>
    <string name="by_domatix">by Domatix</string>
</resources>