<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter_activities"
        android:enabled="false"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="200"
        android:title="@string/action_filter"
        android:visible="false"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_filter_activities_late"
                android:checkable="true"
                android:checked="true"
                android:title="@string/action_filter_activities_late" />

            <item
                android:id="@+id/action_filter_activities_today"
                android:checkable="true"
                android:checked="true"
                android:title="@string/action_filter_activities_today" />

            <item
                android:id="@+id/action_filter_activities_future"
                android:checkable="true"
                android:checked="true"
                android:title="@string/action_filter_activities_future" />
        </menu>
    </item>

    <item
        android:id="@+id/action_activities_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:visible="true"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_activities_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="300"
        android:enabled="false"
        android:title="@string/action_sort"
        android:visible="false"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_activities_sort_type"
                    android:title="@string/action_activities_sort_type" />

                <item
                    android:id="@+id/action_activities_sort_date"
                    android:title="@string/action_activities_sort_date" />
            </group>
        </menu>
    </item>


</menu>